// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reactions should add data to the tree 1`] = `
Object {
  "bot-output": Object {
    "♥️": Array [
      Object {
        "ioc": Object {},
        "options": Object {
          "channelNames": Array [
            "bot-output",
          ],
          "emoji": "♥️",
          "event": "REACTION_ADD",
        },
      },
    ],
  },
  "channel": Object {},
}
`;

exports[`Reactions should add data to the tree 2`] = `
Object {
  "bot-output": Object {
    "♥️": Array [
      Object {
        "ioc": Object {},
        "options": Object {
          "channelNames": Array [
            "bot-output",
          ],
          "emoji": "♥️",
          "event": "REACTION_ADD",
        },
      },
      Object {
        "ioc": Object {},
        "options": Object {
          "allowedRoles": Array [
            "Support",
          ],
          "channelNames": Array [
            "bot-output",
          ],
          "emoji": "♥️",
          "event": "REACTION_REMOVE",
        },
      },
    ],
  },
  "channel": Object {},
}
`;

exports[`Reactions should add data to the tree 3`] = `
Object {
  "bot-development": Object {
    "😘️": Array [
      Object {
        "ioc": Object {},
        "options": Object {
          "allowedRoles": Array [
            "Developer",
          ],
          "channelNames": Array [
            "bot-development",
            "bot-test-channel",
          ],
          "emoji": "😘️",
          "event": "REACTION_ADD",
        },
      },
    ],
  },
  "bot-output": Object {
    "♥️": Array [
      Object {
        "ioc": Object {},
        "options": Object {
          "channelNames": Array [
            "bot-output",
          ],
          "emoji": "♥️",
          "event": "REACTION_ADD",
        },
      },
      Object {
        "ioc": Object {},
        "options": Object {
          "allowedRoles": Array [
            "Support",
          ],
          "channelNames": Array [
            "bot-output",
          ],
          "emoji": "♥️",
          "event": "REACTION_REMOVE",
        },
      },
    ],
  },
  "bot-test-channel": Object {
    "😘️": Array [
      Object {
        "ioc": Object {},
        "options": Object {
          "allowedRoles": Array [
            "Developer",
          ],
          "channelNames": Array [
            "bot-development",
            "bot-test-channel",
          ],
          "emoji": "😘️",
          "event": "REACTION_ADD",
        },
      },
    ],
  },
  "channel": Object {},
}
`;

exports[`Reactions should extract reaction from direct message 1`] = `
Array [
  Object {
    "handlerKeys": Array [
      "channel-id",
      null,
    ],
    "isDirectMessage": true,
    "member": null,
  },
]
`;

exports[`Reactions should extract reaction from public channel 1`] = `
Array [
  Object {
    "handlerKeys": Array [
      "guild-channel",
      null,
    ],
    "isDirectMessage": false,
    "member": Object {
      "deleted": false,
      "displayName": "nick",
      "guildId": "guild-id",
      "joinedTimestamp": NaN,
      "nickname": "nick",
      "pending": false,
      "premiumSinceTimestamp": null,
      "userId": "222222222222222200",
    },
  },
]
`;
